sass/style.scss
/*Variables*/

$color-one: #f29f05;
$color-two: #f2f2f2;

$font-main: 'Signika', sans-serif;

/* Global */

*,
*::before,
*::after {
  box-sizing: border-box;
}

body {
  margin: 0;
  font-family: $font-main;
}

.section-decription h1 {
  font-size: 30px;
}

/*Front page*/

.brand-logo i {
  font-size: 70px;
}

.brand-logo a {
  color: $color-one;
}

.brand-logo a:hover {
  color: $color-two;
}

.front-page {
  height: 100vh;
  position: relative;
  background-image: url('../images/Nowy_Jork.jpg');
  background-size: cover;
  background-attachment: fixed;
}

.container {
  max-width: 100%;
}

.front-page nav {
  margin: 15px auto;
  position: absolute;
}

.front-page nav div {
  margin: auto;
}

.button-menu {
  display: none;
}

nav .row {
  max-width: 2000px;
  display: flex;
  justify-content: space-between;
}

nav ul {
  list-style-type: none;
  padding: 0;
}

nav ul li {
  display: inline-block;
  margin-left: 20px;
  text-align: left;
  position: relative;
}

nav ul li a {
  text-decoration: none;
  color: black;
}

.menu-list {
  margin-left: 200px;
}

.menu ul ul {
  display: none;
}

.menu ul ul li {
  display: block;
  margin: 10px 0;
  width: 100px;
}

.menu ul li a:hover {
  color: $color-one;
}

.menu ul li:hover {
  ul {
    display: block;
    position: absolute;
  }
}

.front-page {
  max-height: 100vh;
}

.slogans {
  font-family: $font-main;
  font-size: 30px;
  position: absolute;
  margin-top: 20%;
  text-align: center;
  width: 100%;
}

.button {
  border: 2px solid $color-one;
  padding: 20px 40px;
  min-width: 200px;
  min-height: 100px;
  color: $color-one;
  line-height: 70px;
  text-decoration: none;
}

.button:hover {
  border: none;
  background: black;
  color: white;
  transition: 1s;
}

/*City Goals*/

.city-goals {
  margin: 10px 200px;
}

.section-decription {
  text-align: center;
  margin-top: 50px;
}

.city-goals .feature {
  text-align: center;
  margin-top: 100px;
}

.city-goals i {
  font-size: 70px;
  color: $color-one;
  height: 120px;
  width: 120px;
  border: 4px solid $color-one;
  border-radius: 100%;
  text-align: center;
  line-height: 110px;
}

.icon-1 {
  padding-left: 8px;
}

.city-goals i:hover {
  transform: rotate(360deg);
  transition: 1s;
}

/*Resources*/

.resources {
  padding: 10px 200px;
  background-color: $color-two;
}

.box {
  height: 300px;
  margin: 30px;
  position: relative;
  background: white;
}

.box img {
  left: 0;
  height: 250px;
  width: 100%;
  position: absolute;
  object-fit: cover;
  transition: 1s;
}

.box h2 {
  position: absolute;
  bottom: 15px;
  font-size: 50px;
}

.resources a {
  color: $color-one;
  text-decoration: none;
  transition: 1s;
}

.resources .box:hover {
  img {
    filter: brightness(50%);
    transition: 1s;
  }

  a {
    color: white;
    transition: 1s;
  }
}

.box p {
  position: absolute;
  bottom: 1px;
}

/*Footer*/

footer {
  padding: 10px 200px;
}

footer h6 {
  font-size: 15px;
}

footer ul {
  display: flex;
  justify-content: space-between;
}

footer li {
  list-style-type: none;
  display: inline-block;
  font-size: 30px;
  height: 60px;
  width: 60px;

  border-radius: 100%;
  background-color: $color-two;
  text-align: center;
  line-height: 62px;
}

footer li p {
  display: none;
}

footer a {
  color: $color-one;
}

footer li:hover {
  transform: scale(1.1);
  background-color: $color-one;
  color: $color-two;
  transition: 1s;

  a {
    color: $color-two;
  }
}

/*Media*/

@media (max-width: 767px) {
  .menu-list {
    font-size: 15px;
  }

  .slogans {
    font-size: 20px;
    margin-top: 200px;
  }

  .city-goals {
    margin: 10px 30px;
  }

  .city-goals .row {
    flex-direction: column;
  }

  .resources {
    padding: 10px;
  }

  footer {
    padding: 10px;
    flex-direction: column-reverse;
  }

  footer ul {
    display: flex;
    justify-content: space-evenly;
  }

  footer h6 {
    text-align: center;
  }
}

@media (min-width: 767px) and (max-width: 1500px) {
  .box h2 {
    font-size: 30px;
    bottom: 30px;
  }
}
@media (max-width: 1500px) {
  .button-menu {
    display: inline-block;
  }

  footer ul {
    display: flex;
    justify-content: space-evenly;
  }

  footer {
    padding: 10px;
    flex-direction: column-reverse;
  }

  footer h6 {
    text-align: center;
  }
}

